codegen/tests/ui/func/attr2.stderr
error: unknown arg type: bbb
 --> tests/ui/func/attr2.rs:8:33
  |
8 | pub async fn send_get(a: i32, #[bbb] b: i32) -> Result<String> {}
  |                                 ^^^
